main/libpcap: fix license

--- a/main/libpcap/APKBUILD
+++ b/main/libpcap/APKBUILD
@@ -1,18 +1,16 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libpcap
 pkgver=1.9.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A system-independent interface for user-level packet capture"
 url="https://www.tcpdump.org/"
 arch="all"
-license="BSD"
-depends=
+license="BSD-3-Clause"
 options="!check"
 makedepends="bison flex autoconf linux-headers"
-source="https://www.tcpdump.org/release/$pkgname-$pkgver.tar.gz
+source="https://www.tcpdump.org/release/libpcap-$pkgver.tar.gz
 	fix-headers.patch"
 subpackages="$pkgname-doc $pkgname-dev"
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   1.9.1-r0:
@@ -24,7 +22,6 @@ builddir="$srcdir"/$pkgname-$pkgver
 #    - CVE-2019-15165
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -42,7 +39,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install install-shared
 }
 
