testing/rofi-pass: disable on all arch, rofi deps missing
disabled on all arch because rofi pkg in depends is also disabled

--- a/testing/rofi-pass/APKBUILD
+++ b/testing/rofi-pass/APKBUILD
@@ -5,7 +5,7 @@ pkgver="2.0.2"
 pkgrel=0
 pkgdesc="rofi frontend for pass"
 url="https://github.com/carnager/rofi-pass"
-arch="noarch"
+arch="" # disabled because rofi is also disabled
 license="GPL-3.0-only"
 depends="xdg-utils rofi pass gawk pwgen xdotool xclip"
 subpackages="$pkgname-doc"
