main/nftables: modernize abuild, sort makedepends

--- a/main/nftables/APKBUILD
+++ b/main/nftables/APKBUILD
@@ -8,13 +8,25 @@ pkgdesc="Netfilter tables userspace tools"
 url="https://netfilter.org/projects/nftables"
 arch="all"
 license="GPL-2.0-or-later"
-makedepends="bison docbook2x flex gmp-dev libmnl-dev libnftnl-dev ncurses-dev
-	readline-dev asciidoc jansson-dev"
+makedepends="
+	asciidoc
+	bison
+	docbook2x
+	flex
+	gmp-dev
+	jansson-dev
+	libmnl-dev
+	libnftnl-dev
+	ncurses-dev
+	readline-dev
+	"
 install="$pkgname.post-upgrade"
 subpackages="$pkgname-doc"
-source="https://netfilter.org/projects/nftables/files/nftables-$pkgver.tar.bz2
+source="https://netfilter.org/projects/nftables/files/$pkgname-$pkgver.tar.bz2
 	nftables.confd
-	nftables.initd"
+	nftables.initd
+	"
+builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	default_prepare
@@ -22,8 +34,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	CONFIG_MAN=y DB2MAN=docbook2x-man ./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -37,8 +47,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
