community/influxdb: enable aarch64

--- a/community/influxdb/APKBUILD
+++ b/community/influxdb/APKBUILD
@@ -6,7 +6,7 @@ pkgver=1.7.7
 pkgrel=0
 pkgdesc="Scalable datastore for metrics, events, and real-time analytics"
 url="https://www.influxdata.com/time-series-platform/influxdb/"
-arch="all !aarch64 !x86"
+arch="all !x86"
 license="MIT"
 makedepends="go dep python2 asciidoc xmlto"
 install="$pkgname.pre-install"
@@ -40,7 +40,8 @@ build() {
 check() {
 	# Failures on these arches
 	case $CARCH in
-		s390x|arm*|ppc64le) return 0
+		s390x|arm*|aarch64|ppc64le) return 0
+		# aarch64: float precision issue (relative diff < 1E15, safe to ignore)
 	esac
 	go test -short ./...
 }
