--- a/main/nftables/APKBUILD
+++ b/main/nftables/APKBUILD
@@ -25,6 +25,7 @@ subpackages="$pkgname-doc"
 source="https://netfilter.org/projects/nftables/files/$pkgname-$pkgver.tar.bz2
 	nftables.confd
 	nftables.initd
+	nftables.nft
 	"
 builddir="$srcdir/$pkgname-$pkgver"
 
@@ -51,8 +52,10 @@ package() {
 
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -Dm644 "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
+	install -Dm644 "$srcdir"/nftables.nft "$pkgdir"/etc/nftables.nft
 }
 
 sha512sums="d264f6fc75c95510e29fe7d5b82ae418d502f40437b098ba6117ffb1374d9989d70a7296e2e58c5fb25142145a987bb9c160902637899f892589809f9541db43  nftables-0.9.3.tar.bz2
 4eb1adf003dfcaad65c91af6ca88d91b7904c471aefae67e7d3c2f8e053e1ac196d3437a45d1fed5a855b876a0f1fc58a724e381d2acf1164d9120cadee73eef  nftables.confd
-58daafb012b7cd0248a7db6e10f6a667e683347aaea7eaa78cb88780272f334e00913cea3fd39a22a4a72acc27fabd101944b40916f4b534ddeb509bd0232017  nftables.initd"
+58daafb012b7cd0248a7db6e10f6a667e683347aaea7eaa78cb88780272f334e00913cea3fd39a22a4a72acc27fabd101944b40916f4b534ddeb509bd0232017  nftables.initd
+059e0920517ff9f9c564bdfda6a06e8392a2755c01f8d0331a8577fd027713948d3f1e2cbe9da5077870181dc9e425d8c69e4c82ea6ee261fced4ab61aff3ad4  nftables.nft"
