community/epiphany: upgrade to 3.34.3.1

--- a/community/epiphany/APKBUILD
+++ b/community/epiphany/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=epiphany
-pkgver=3.34.2
+pkgver=3.34.3.1
 pkgrel=0
 pkgdesc="A simple, clean, beautiful view of the web"
 url="https://wiki.gnome.org/Apps/Web"
@@ -13,7 +13,7 @@ makedepends="meson iso-codes-dev gtk+3.0-dev gsettings-desktop-schemas-dev
 	libsoup-dev libxml2-dev nettle-dev sqlite-dev webkit2gtk-dev gcr-dev itstool"
 checkdepends="appstream-glib desktop-file-utils xvfb-run"
 subpackages="$pkgname-lang $pkgname-doc"
-source="https://download.gnome.org/sources/epiphany/${pkgver%.*}/epiphany-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/epiphany/${pkgver%.*.*}/epiphany-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -35,4 +35,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="2cf8c6f14e19b2a8868d8c85e633309d145f77ac1222ceb8d12bdd041aed95fd30c2b56ec5f70de676263c7e52fa021da9aef760349b6582e850705c56e40778  epiphany-3.34.2.tar.xz"
+sha512sums="c4692ff8c4ea534a420cc8469c1b1f8f6ad7ad83f687ffd0bedc6d6d71b83391c9b65c7a9a21190ce92bd709569a423700e1ac2be6bcfe413e47e5702f51aa0e  epiphany-3.34.3.1.tar.xz"
