testing/py3-ufo2ft: add missing dep on py3-skia-pathops; enable tests

--- a/testing/py3-ufo2ft/APKBUILD
+++ b/testing/py3-ufo2ft/APKBUILD
@@ -2,14 +2,13 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=py3-ufo2ft
 pkgver=2.11.1
-pkgrel=0
+pkgrel=1
 pkgdesc="bridge from UFOs to FontTools objects"
-options="!check" # Requires unpackaged 'pathops'
 url="https://github.com/googlefonts/ufo2ft"
-arch="noarch"
+arch="noarch !s390x" # skia-pathops
 license="MIT"
 depends="python3 py3-fonttools py3-defcon py3-cu2qu py3-compreffor
-	py3-booleanoperations py3-ufolib2"
+	py3-booleanoperations py3-ufolib2 py3-skia-pathops"
 makedepends="py3-setuptools"
 checkdepends="py3-pytest"
 source="$pkgname-$pkgver.tar.gz::https://github.com/googlefonts/ufo2ft/archive/v$pkgver.tar.gz"
