--- a/main/nftables/APKBUILD
+++ b/main/nftables/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=nftables
 pkgver=0.9.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Netfilter tables userspace tools"
 url="https://netfilter.org/projects/nftables"
 arch="all"
@@ -21,7 +21,7 @@ makedepends="
 	readline-dev
 	"
 install="$pkgname.post-upgrade"
-subpackages="$pkgname-doc"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://netfilter.org/projects/nftables/files/$pkgname-$pkgver.tar.bz2
 	nftables.confd
 	nftables.initd
