community/ttf-cantarell: upgrade to 0.200

--- a/community/ttf-cantarell/APKBUILD
+++ b/community/ttf-cantarell/APKBUILD
@@ -1,12 +1,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
+# Contributor: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=ttf-cantarell
-pkgver=0.111
+pkgver=0.200
 pkgrel=0
 pkgdesc="Humanist sans-serif font designed for on-screen reading"
 url="https://wiki.gnome.org/Projects/CantarellFonts"
 arch="noarch"
 license="Custom"
-makedepends="meson gettext-dev appstream-glib-dev"
+makedepends="meson gettext-dev appstream-glib-dev psautohint py3-fontmath"
 install_if="gnome-shell"
 source="https://download.gnome.org/sources/cantarell-fonts/$pkgver/cantarell-fonts-$pkgver.tar.xz"
 builddir="$srcdir/cantarell-fonts-$pkgver"
@@ -23,7 +24,8 @@ build() {
 }
 
 package() {
+	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="638298a6381a3ede862d1b100fcfea943bebb5e1c0dc4f1597ab2f841e933b484436b139090a669c770c02483a24f2b92bbd12bce71d7a40eb4c325573e3df9e  cantarell-fonts-0.111.tar.xz"
+sha512sums="44c154c6ca195f8a4bdb3c1f2f6856f03ffce47ef82ea381575e1291db46e6035dc8febd00d9a34800961c4e403d0e4fb9a691ef376d27d3cd883b9ef81a0711  cantarell-fonts-0.200.tar.xz"
