testing/gcc-cross-embedded: disable on s390x
fails on s390x with error message:
libstdc++-v3/src/c++11/cxx11-shim_facets.cc:437:2: internal compiler
error: Segmentation fault

--- a/testing/gcc-cross-embedded/APKBUILD
+++ b/testing/gcc-cross-embedded/APKBUILD
@@ -18,7 +18,8 @@ pkgdesc="The GNU Compiler Collection for embedded targets"
 url="http://gcc.gnu.org"
 depends="gcc"
 makedepends="bash linux-headers gmp-dev mpfr-dev mpc1-dev zlib-dev"
-arch="all"
+arch="all !s390x" # fails on s390x with error message:
+# 'internal compiler error: Segmentation fault'
 license="GPL-3.0-or-later"
 for target in $_targets; do
 	targetnorm="${target//-/_}"
