community/epiphany: add ibus to checkdepends

--- a/community/epiphany/APKBUILD
+++ b/community/epiphany/APKBUILD
@@ -11,7 +11,7 @@ depends="gsettings-desktop-schemas"
 makedepends="meson iso-codes-dev gtk+3.0-dev gsettings-desktop-schemas-dev
 	icu-dev json-glib-dev libdazzle-dev libhandy-dev libnotify-dev libsecret-dev
 	libsoup-dev libxml2-dev nettle-dev sqlite-dev webkit2gtk-dev gcr-dev itstool"
-checkdepends="appstream-glib desktop-file-utils xvfb-run"
+checkdepends="appstream-glib desktop-file-utils xvfb-run ibus"
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/epiphany/${pkgver%.*.*}/epiphany-$pkgver.tar.xz"
 
