community/gjs: rebuild
Not 100% what bump caused this but gjs refused to start due to missing symbols.

--- a/community/gjs/APKBUILD
+++ b/community/gjs/APKBUILD
@@ -2,14 +2,15 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gjs
 pkgver=1.58.3
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME javascript library"
 url="https://wiki.gnome.org/Projects/Gjs"
 arch="all !s390x"
 license="MIT LGPL-2.0-or-later"
 makedepends="$depends_dev dbus gobject-introspection-dev mozjs60-dev mozjs60
 	gtk+3.0-dev cairo-dev"
-options="!check" # needs DISPLAY
+checkdepends="xvfb-run"
+options="!check" # testCommandLine.sh fails
 subpackages="$pkgname-dev"
 source="https://download.gnome.org/sources/gjs/${pkgver%.*}/gjs-$pkgver.tar.xz"
 
@@ -26,7 +27,7 @@ build() {
 }
 
 check() {
-	make check
+	xvfb-run make check
 }
 
 package() {
