testing/git-cola: disable on armhf

--- a/testing/git-cola/APKBUILD
+++ b/testing/git-cola/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.6
 pkgrel=1
 pkgdesc="A GUI application for git built on Python & Qt5"
 url="https://git-cola.github.io"
-arch="noarch"
+arch="noarch !armhf" # qtdeclarative
 license="GPL-2.0-or-later"
 depends="python3 py3-qt5"
 checkdepends="py3-nose"
