--- a/community/ttf-cantarell/APKBUILD
+++ b/community/ttf-cantarell/APKBUILD
@@ -2,13 +2,12 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=ttf-cantarell
 pkgver=0.200
-pkgrel=0
+pkgrel=1
 pkgdesc="Humanist sans-serif font designed for on-screen reading"
 url="https://wiki.gnome.org/Projects/CantarellFonts"
-arch="noarch"
-license="Custom"
+arch="noarch !s390x"
+license="OFL-1.1 AND Apache-2.0"
 makedepends="meson gettext-dev appstream-glib-dev psautohint py3-fontmath"
-install_if="gnome-shell"
 source="https://download.gnome.org/sources/cantarell-fonts/$pkgver/cantarell-fonts-$pkgver.tar.xz"
 builddir="$srcdir/cantarell-fonts-$pkgver"
 
