community/prometheus: adding missing web templates
Been working on migrating my monitoring infrastructure to the community
package and found this oversight.

--- a/community/prometheus/APKBUILD
+++ b/community/prometheus/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=prometheus
 pkgver=2.15.1
-pkgrel=2
+pkgrel=3
 pkgdesc="The Prometheus monitoring system and time series database"
 url="https://github.com/prometheus/prometheus"
 arch="all"
@@ -56,6 +56,18 @@ package() {
 
 	install -Dm644 -t "$pkgdir"/etc/prometheus \
 		documentation/examples/prometheus.yml
+
+	mkdir -p "$pkgdir"/etc/prometheus/console_libraries
+	for file in console_libraries/*
+	do
+		install -Dm644 -t "$pkgdir"/etc/prometheus/console_libraries/ "$file"
+	done
+
+	mkdir -p "$pkgdir"/etc/prometheus/consoles
+	for file in consoles/*
+	do
+		install -Dm644 -t "$pkgdir"/etc/prometheus/consoles/ "$file"
+	done
 }
 
 sha512sums="b08dfa48bddb6e007cd0fd4553847e824d6adfc047d97151b8dd12dbd1f67cfb9301824b320f1cabe9644159e6968b3fd2ee8104a5d53822a9965423c4bb47b5  prometheus-2.15.1.tar.gz
