testing/py3-arrow: upgrade to 0.15.5

--- a/testing/py3-arrow/APKBUILD
+++ b/testing/py3-arrow/APKBUILD
@@ -2,9 +2,10 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-arrow
 _pkgname=arrow
-pkgver=0.15.4
-pkgrel=1
+pkgver=0.15.5
+pkgrel=0
 pkgdesc="Python3 library to create and manipulate dates, times, and timestamps"
+options="!check" # Requires unpackaged 'chai'
 url="https://arrow.readthedocs.io/"
 arch="noarch"
 license="Apache-2.0"
@@ -31,4 +32,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="905cead77a9a75f9511551aff9923321015d4e1615ea44317333dddbe28837932458a46d5237eacf0566e239225a4aabdd1d419ca294c648c8401bf5d8940383  arrow-0.15.4.tar.gz"
+sha512sums="cb147a1f2976e6cedddbf2d2d0d5ce69a4a609d4c0c3d68f96b317fc2af334552cb0c1a94aa5bb38e6d74ca7e1beab1ae8a325920a15efd79c35835c92df2409  arrow-0.15.5.tar.gz"
