--- a/community/mpd/APKBUILD
+++ b/community/mpd/APKBUILD
@@ -20,7 +20,7 @@ makedepends="py3-sphinx lame-dev glib-dev curl-dev libao-dev libmad-dev flac-dev
 	libogg-dev faad2-dev libid3tag-dev libvorbis-dev alsa-lib-dev
 	libsamplerate-dev libshout-dev libmodplug-dev boost-dev icu-dev
 	libnfs-dev samba-dev opus-dev ffmpeg-dev meson libmpdclient-dev
-	py3-attrs"
+	libcdio-paranoia-dev py3-attrs"
 checkdepends="gtest-dev gtest"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-dbg $pkgname-openrc"
@@ -29,6 +29,7 @@ source="https://www.musicpd.org/download/mpd/$_branch/mpd-$pkgver.tar.xz
 	mpd.initd
 	mpd.confd
 	disable-iso-test.patch
+	libcdio-paranoia-version.patch
 	"
 
 build() {
@@ -45,7 +46,7 @@ build() {
 		-Dsmbclient=enabled \
 		-Dffmpeg=enabled \
 		-Dlibmpdclient=enabled \
-		-Dcdio_paranoia=disabled \
+		-Dcdio_paranoia=enabled \
 		-Dtest=true \
 		-Ddocumentation=true \
 		. output
@@ -80,4 +81,5 @@ sha512sums="68b4d9dc4be8454d7ef92df2a7b42513dc2d97bfd6b11ba99bce6709fc58ccbeab05
 f60f6f3e921d20732c1a4c31a97f28660b43fd649e767d6c39661b6a90145231a79ad3f740ae0d706380b245ad040e98b661a513463c54cea161d1f64fc261e0  stacksize.patch
 1fcb7bcd90bd9bc5b4f502c56d1b0d3a3b794f5c3c1b26a2286a5936bc4e1f94f6317d52e54c958c23e40d69aa3e440535aec0fcbaaa73544ecd0c65ff6774a5  mpd.initd
 41b2467f5b03f5c4dd7003cd5f56f6cfc1f67af7a9aa2538d70360f839625222bdd0c4b04c33e8cd52eeecfc354da3ca22f5aaab8aee357a5774aaf3503594e7  mpd.confd
-94de2fb5e984e3246f79c2c7ab2f3123bba6c7d34e0f9b075ba3946d65912fd7f5e9d37bdb0bdee769fa6f6f8abb8ca5f2788b7976e2e5490b848800b31539fb  disable-iso-test.patch"
+94de2fb5e984e3246f79c2c7ab2f3123bba6c7d34e0f9b075ba3946d65912fd7f5e9d37bdb0bdee769fa6f6f8abb8ca5f2788b7976e2e5490b848800b31539fb  disable-iso-test.patch
+1e0e59247a22944435ca6052767ea1359d46362083de40ce36276327e4974315862a9f995f0047811e122bf4ce871f0b3965d15580f6a752d95c3617aa83136c  libcdio-paranoia-version.patch"
