main/pcsc-lite: upgrade to 1.8.26

--- a/main/pcsc-lite/APKBUILD
+++ b/main/pcsc-lite/APKBUILD
@@ -2,24 +2,21 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=pcsc-lite
-pkgver=1.8.25
-pkgrel=2
+pkgver=1.8.26
+pkgrel=0
 pkgdesc="Middleware to access a smart card using SCard API (PC/SC)"
 url="https://pcsclite.apdu.fr/"
 arch="all"
 license="Custom"
-depends=""
 depends_dev="eudev-dev"
 makedepends="$depends_dev perl perl-dev libcap-ng-utils"
 install="pcsc-lite.pre-install pcsc-lite.pre-upgrade"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs"
-source="https://pcsclite.apdu.fr/files/pcsc-lite-${pkgver}.tar.bz2
+source="https://pcsclite.apdu.fr/files/pcsc-lite-$pkgver.tar.bz2
 	pcscd.initd"
 
-builddir="$srcdir"/pcsc-lite-$pkgver
 
 build() {
-	cd "$builddir"
 	./configure --prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
@@ -38,14 +35,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
-        install -D -m755 "$srcdir"/pcscd.initd \
+	install -D -m755 "$srcdir"/pcscd.initd \
 		"$pkgdir"/etc/init.d/pcscd
 	mkdir -p "$pkgdir"/usr/lib/pcsc/drivers
 
@@ -66,5 +61,5 @@ dev() {
 	mv "$subpkgdir"/usr/lib/libpcsclite.so "$pkgdir"/usr/lib/libpcsclite.so
 }
 
-sha512sums="0da63cefd70d9524b2afabd62c5f404758c805b84bbe9ef64fb801ef91a8934c38495513022565ea31bd8550b23bc95b9e9b098ddc76930e3d0643c1fbfb5deb  pcsc-lite-1.8.25.tar.bz2
+sha512sums="23f9f41e08f6a5ff1840bec621ee37d6eb268e4ced58df516eb7e32cb6a84998a1d04bafcec36e6524926963e6730a25301301d364b6bd4dda8da1caaa76f037  pcsc-lite-1.8.26.tar.bz2
 6810ab357b5bcf07bf1ad76ed17ebb8e92be4599303a4e697b87a05d43b8d2bec5d3c29d44d8ddb5d031910ea62ca52a9868e6de9a255227eaeb29d1a7ee0041  pcscd.initd"
