community/log4cplus: upgrade to 2.0.5

--- a/community/log4cplus/APKBUILD
+++ b/community/log4cplus/APKBUILD
@@ -5,14 +5,13 @@ pkgrel=0
 pkgdesc="Logging Framework for C++"
 url="https://sourceforge.net/p/log4cplus/wiki/Home/"
 # tests/testsuite.dir/58/testsuite.log
-# 4 ./appender_test.at:5: "${abs_top_builddir}/appender_test" 2>&1
+# 4 ./appender_test.at:5: "$abs_top_builddir/appender_test" 2>&1
 # 5 Aborted (core dumped)
 arch="all !armhf !armv7" # test 50 dumps core
 license="Apache-2.0"
 checkdepends="findutils"
 subpackages="$pkgname-static $pkgname-dev $pkgname-unicode"
-source="https://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://downloads.sourceforge.net/log4cplus/log4cplus-$pkgver.tar.xz"
 
 build() {
 	./configure \
