community/gnome-music: upgrade to 3.34.3

--- a/community/gnome-music/APKBUILD
+++ b/community/gnome-music/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-music
-pkgver=3.34.2
+pkgver=3.34.3
 pkgrel=0
 pkgdesc="Music is the new GNOME music playing application"
 url="https://wiki.gnome.org/Apps/Music"
@@ -13,6 +13,7 @@ makedepends="meson gnome-online-accounts-dev libdazzle-dev gtk+3.0-dev libsoup-d
 	gobject-introspection-dev grilo-dev grilo-plugins-dev tracker-dev py3-gobject3-dev
 	libmediaart-dev py-cairo-dev itstool"
 checkdepends="desktop-file-utils appstream-glib"
+options="!check" # appstream metadata test fails
 subpackages="$pkgname-lang $pkgname-doc $pkgname-dbg"
 source="https://download.gnome.org/sources/gnome-music/${pkgver%.*}/gnome-music-$pkgver.tar.xz
 	dont-require-py3-gettext-support.patch"
@@ -36,5 +37,5 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="8e50cb99b41030fb78bf31cf9ef51598333b224cf400f76e019f01f4a6c37f58482e3c7b230735910bf30a7942f2f32b8480c16c221176fe4d9148660b0f820c  gnome-music-3.34.2.tar.xz
+sha512sums="01bfd0f4fd5ea39b55baf5ad55baa69322e406b1f2ae0c6ac157f97afad8ab2f884a310e476134fadc11274c5ff5eaca2d80c4f3773db063509892d21e560c78  gnome-music-3.34.3.tar.xz
 0437214912794981cdb6df4309f34b40b65ec4412cc0ec9a384da07e22a0c1d3cc8272e2a210f1e614f0e9a9767d96b83624ad1f1f82bd3445ff62c8f1234dc9  dont-require-py3-gettext-support.patch"
