--- a/community/rhythmbox/APKBUILD
+++ b/community/rhythmbox/APKBUILD
@@ -1,6 +1,6 @@
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=rhythmbox
-pkgver=3.4.3
+pkgver=3.4.4
 pkgrel=0
 pkgdesc="GNOME audio player"
 url="https://wiki.gnome.org/Apps/Rhythmbox"
@@ -11,8 +11,9 @@ depends_dev="gnome-desktop-dev libpeas-dev"
 makedepends="$depends_dev tdb-dev libsoup-dev json-glib-dev totem-pl-parser-dev
 	gmime-dev libmtp-dev gst-plugins-base-dev py3-gobject3-dev libxslt libxml2-utils
 	docbook-xml docbook-xsl itstool intltool gstreamer-dev"
+options="!check" # no tests
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/rhythmbox/3.4/rhythmbox-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/rhythmbox/${pkgver%.*}/rhythmbox-$pkgver.tar.xz"
 
 build() {
 	./configure \
@@ -25,8 +26,12 @@ build() {
 	make
 }
 
+check() {
+	make check
+}
+
 package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="a3585c026037674345909e2050a4ccb22a75084f830f351b926f7fbfc84d200c8246b8da4bd72804e595929ab06d3c7b53d362675dde193746f40b0f38b7c493  rhythmbox-3.4.3.tar.xz"
+sha512sums="1fcd41dd66ffe34852f8cedb80ade57d101118295d6fd6f0a8687000ab6500991d2e11482daedb30a7abaf63e54e33ee3c4eaab73b075ec5e5907182f9a8c865  rhythmbox-3.4.4.tar.xz"
