community/py3-oscrypto: do not use the oscrypto_tests module
When invoking the tests using the oscrypto_tests module the exit code
isn't set correctly. Therefore, test failures do not result in a build
failure.

Invoking the test suite using `python run.py tests` was the default
until it was changed without further explanation in
d21aacbfa9eef7c67341ea07c5014e2cc5344536.

--- a/community/py3-oscrypto/APKBUILD
+++ b/community/py3-oscrypto/APKBUILD
@@ -18,10 +18,7 @@ build() {
 }
 
 check() {
-	cd "$builddir"/tests
-	python3 setup.py build
-	cd "$builddir"
-	PYTHONPATH="$builddir"/tests/build/lib python3 -m oscrypto_tests
+	python3 run.py tests
 }
 
 package() {
