community/py3-oscrypto: add net to options

--- a/community/py3-oscrypto/APKBUILD
+++ b/community/py3-oscrypto/APKBUILD
@@ -8,6 +8,7 @@ pkgdesc="Python crypto library backed by the OS"
 url="https://github.com/wbond/oscrypto"
 arch="noarch"
 license="MIT"
+options="net" # required to make tests pass in abuild rootbld
 depends="python3 py3-setuptools py3-asn1crypto>=1.0.0"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/wbond/oscrypto/archive/$pkgver.tar.gz"
