testing/supertuxkart: upgrade to 1.1

--- a/testing/supertuxkart/APKBUILD
+++ b/testing/supertuxkart/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=supertuxkart
-pkgver=1.0
-pkgrel=1
+pkgver=1.1
+pkgrel=0
 arch="all"
 url="https://supertuxkart.net/"
 pkgdesc="Kart racing game featuring Tux and his friends"
 license="GPL-3.0-or-later"
 depends="$pkgname-data"
 makedepends="cmake glew-dev jpeg-dev libpng-dev libxrandr-dev wayland-dev libxkbcommon-dev bluez-dev openal-soft-dev libvorbis-dev freetype-dev fribidi-dev curl-dev harfbuzz-dev"
-source="$pkgname-$pkgver.tar.xz::https://downloads.sourceforge.net/supertuxkart/supertuxkart-$pkgver-src.tar.xz
-	no-sysctl.patch
-	va_list.patch"
+source="$pkgname-$pkgver.tar.xz::https://downloads.sourceforge.net/supertuxkart/supertuxkart-$pkgver-src.tar.xz"
 subpackages="$pkgname-static $pkgname-data::noarch"
+builddir="$srcdir/$pkgname-$pkgver-src"
 
 prepare() {
 	default_prepare
@@ -55,6 +54,4 @@ data() {
 		"$subpkgdir"/usr/share/supertuxkart
 }
 
-sha512sums="182754610abd09545630fa1f7fda858ba1731bbacb078bc71597e143f9cb2a1cfcedd3038720760d0471a89b79cc3bb1eb292d38fcd53be05aad7cb17c474ca9  supertuxkart-1.0.tar.xz
-e197cc991e197b2406c40006b3966663b2279eb96872b0f567dfa574c82eb1fa9ebd2101b8e0d9dbc66b766882d2b200a32c75364f1218cdf48e4362f20268f4  no-sysctl.patch
-0a6d713dd7505fd0ac921de0d2584459e271ea88f7088a1333ad1f3c704d84785845f8c9b96d7441a42e5c13225810921f343c163fd077d1868d641afa8cb7f4  va_list.patch"
+sha512sums="81d5ff59bb33eba8a00547239d54cacfde25eed0c56c857712a00a62032e4cf371cdd367159eaa4bfec6d4dd5781b705e41b58a26b864aa43678cfe9926bb804  supertuxkart-1.1.tar.xz"
