community/youtube-dl: upgrade to 2020.01.01

--- a/community/youtube-dl/APKBUILD
+++ b/community/youtube-dl/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=youtube-dl
-pkgver=2019.12.25
+pkgver=2020.01.01
 pkgrel=0
 pkgdesc="Command-line program to download videos from YouTube"
 url="https://youtube-dl.org/"
@@ -15,7 +15,8 @@ subpackages="$pkgname-doc
 	$pkgname-zsh-completion:zshcomp
 	$pkgname-bash-completion:bashcomp
 	$pkgname-fish-completion:fishcomp"
-source="https://github.com/rg3/youtube-dl/releases/download/$pkgver/youtube-dl-$pkgver.tar.gz"
+source="https://github.com/rg3/youtube-dl/releases/download/$pkgver/youtube-dl-$pkgver.tar.gz
+	0001-devscripts-create-github-release-do-not-import-base6.patch"
 builddir="$srcdir/$pkgname"
 
 prepare() {
@@ -64,4 +65,5 @@ fishcomp() {
 		"$subpkgdir"/usr/share/fish/completions/
 }
 
-sha512sums="951219648597d5e19fd3bcb3c64d8641bffd63cf3c6b4b30332d9148ad8b12c1be252e4cacbcd8169ce502b0fe20b2ff7163620382769b5e83e82d155e4f38c8  youtube-dl-2019.12.25.tar.gz"
+sha512sums="035d44aa4989067587d3c5a8d1bb4214bb7bfa16b91562c730fcf93de1578de75ddf12c8a0900643578546a4230da776b8b83f69378525c1480e9e0061f492cf  youtube-dl-2020.01.01.tar.gz
+ccdf23dd5284f760120aae257e5f534ed785091e6db4eb2c8e0e95f50bfa9da0a2440e92e47ab5625cc59032557bdcaa009e6a6c129057a3a665b7f9521d125a  0001-devscripts-create-github-release-do-not-import-base6.patch"
