community/kmouth: move from testing

--- a/community/kmouth/APKBUILD
+++ b/community/kmouth/APKBUILD
@@ -8,11 +8,18 @@ url="https://kde.org/applications/utilities/org.kde.kmouth"
 pkgdesc="Speech Synthesizer Frontend"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtspeech-dev kcrash-dev kcompletion-dev kconfig-dev kconfigwidgets-dev kcoreaddons-dev kdoctools-dev ki18n-dev kio-dev kwidgetsaddons-dev kxmlgui-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kmouth-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -20,10 +27,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
