abuild: include $pkgname in temporary rootbld directory
This makes it easier to figure out to which build the directory belongs
to. Occasionally, I have many failed abuild rootblds in my /var/tmp and
including the $pkgname in the directory would help me associating the
directories with failed builds I recently executed.

--- a/abuild.in
+++ b/abuild.in
@@ -2257,7 +2257,7 @@ rootbld() {
 
 	mkusers
 
-	BUILD_ROOT=$(mktemp -d /var/tmp/abuild.XXXXXXXXXX)
+	BUILD_ROOT=$(mktemp -d "/var/tmp/abuild-$pkgname.XXXXXXXXXX")
 
 	mkdir -p "$BUILD_ROOT/proc" "$BUILD_ROOT/etc/apk/keys" \
 		"$BUILD_ROOT/$HOME/.abuild" "$BUILD_ROOT/$aportsgit" \
