--- a/main/ctags/APKBUILD
+++ b/main/ctags/APKBUILD
@@ -12,14 +12,9 @@ license="GPL-2.0-or-later"
 checkdepends="diffutils python"
 makedepends="autoconf automake pkgconf py3-docutils"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/universal-ctags/ctags/archive/$_commit.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/universal-ctags/ctags/archive/$_commit.tar.gz
+	0001-lregex-fix-meaningless-type-mismatching-between-unsi.patch"
 builddir="$srcdir"/$pkgname-$_commit
-
-# FIXME: Tests curerntly fail on s390x
-# See: https://github.com/universal-ctags/ctags/issues/2369
-case "$CARCH" in
-s390x) options="!check" ;;
-esac
 
 # secfixes:
 #   5.8-r5:
@@ -56,4 +51,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2e4fe3b3bf77e0456298f398a2e16cb3dd116da2c078e09884b8cd40d182a6cb07b88538713c890517535348fb1d9016b3dca46fa6f6a9b18fe784ec7b18ca30  ctags-0_git20191207.tar.gz"
+sha512sums="2e4fe3b3bf77e0456298f398a2e16cb3dd116da2c078e09884b8cd40d182a6cb07b88538713c890517535348fb1d9016b3dca46fa6f6a9b18fe784ec7b18ca30  ctags-0_git20191207.tar.gz
+e5c636eaa0bb6371d0ba54fc9777d3f3e488a03baf380509389c6d0488c19dd23eba5dc787d2d6bab13007cfe98ed17dfed5078ea7b94398afebbe5e64a3b6cf  0001-lregex-fix-meaningless-type-mismatching-between-unsi.patch"
