--- a/community/jool-modules-lts/APKBUILD
+++ b/community/jool-modules-lts/APKBUILD
@@ -5,7 +5,7 @@
 # Keep _ver in sync with community/jool-tools!
 # When changing _ver we *must* bump _rel!
 _name=jool-modules
-_ver=4.0.6
+_ver=4.0.7
 _rel=0
 
 # For custom kernels set $FLAVOR.
@@ -19,7 +19,7 @@ if [ -z "$FLAVOR" ]; then
 fi
 
 # Kernel version
-# Keep in sync with main/linux-vanilla!
+# Keep in sync with main/linux-lts!
 _kpkg=linux-$_flavor
 _kver=5.4.7
 _krel=0
@@ -95,4 +95,4 @@ _modules_install() {
 		INSTALL_MOD_PATH="$destdir"
 }
 
-sha512sums="8648cc876d801b34c4bc9616da642727d1e49ed2937daa7fdca58c0fd80dbd1c432018af410c44c1d24224aba5289f726f43adc259cdf8193832d39a86d0f6a6  jool-4.0.6.tar.gz"
+sha512sums="adc269c75b7195fbb6de04ecc50824b464644bcaf1ba00634912cbdc21308b872273f4dc5b866f2af9dfd58fedf624e77e0ddaf68403447e6749f7fd0e50146f  jool-4.0.7.tar.gz"
