--- a/main/socat/APKBUILD
+++ b/main/socat/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Kiyoshi Aman <kiyoshi.aman@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=socat
-pkgver=1.7.3.3
-pkgrel=1
+pkgver=1.7.3.4
+pkgrel=0
 pkgdesc="Multipurpose relay for binary protocols"
 # test  58 CHILDDEFAULT: child process default properties... FAILED:
 # ./socat -t 0.1  -u exec:./procan -
@@ -13,14 +13,12 @@ license="GPL-2.0-only"
 makedepends="openssl-dev readline-dev linux-headers"
 checkdepends="bash"
 subpackages="$pkgname-doc"
-source="http://www.dest-unreach.org/$pkgname/download/$pkgname-$pkgver.tar.bz2
+source="http://www.dest-unreach.org/socat/download/socat-$pkgver.tar.bz2
 	use-linux-headers.patch
 	netdb-internal.patch
-	0001-xiogetaddrinfo-support-SOCK_RAW.patch
 	"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,7 +27,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
@@ -43,7 +40,6 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="6073facb3db7cd24b9380f400876d73537b52b8e53ff6aac080388c2b1fc4a2decdfac7ce23bff6ab680fb2751251cda7fc67be9b09954edc46f449e0a7d0c7e  socat-1.7.3.3.tar.bz2
+sha512sums="f338d28e5fd9d7ebb9e30b0fa700bcd5ff50ff9e668403474963a3310ba2b5f68b5236b928872c18e4b1ee95328374987e7e263ac7655a0d9b3fc9da77281123  socat-1.7.3.4.tar.bz2
 2032b6528cb27b69d8fb6a6f64af32fcc1f6e4934bb0d7c8931b38ab7ad5e27f6f4344a6cf49751fa3178cd725f954e195373362f7d5929e587d7f0309346059  use-linux-headers.patch
-22a6e0c2317a9317997c98114daac258ebbcc3d8e58e49a6ebf24781b98967afed47c63807282582fa0909076fe349281f05e4462faacb90e7aabc853903d6e6  netdb-internal.patch
-4679b9db042a8398c96f96cdcabbde0ead6e52c08098372cc7bb468cc21593027d6824d6ff5c92eb1e7c1e5f0138a0ec23ea51b3bc63d5f21e7266f6790a25b1  0001-xiogetaddrinfo-support-SOCK_RAW.patch"
+22a6e0c2317a9317997c98114daac258ebbcc3d8e58e49a6ebf24781b98967afed47c63807282582fa0909076fe349281f05e4462faacb90e7aabc853903d6e6  netdb-internal.patch"
