--- a/main/perl-db_file/APKBUILD
+++ b/main/perl-db_file/APKBUILD
@@ -2,17 +2,16 @@
 # Maintainer:  Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=perl-db_file
 _pkgname=DB_File
-pkgver=1.852
-pkgrel=1
+pkgver=1.853
+pkgrel=0
 pkgdesc="Perl5 access to Berkeley DB"
-url="http://search.cpan.org/~pmqs/DB_File-1.820/"
+url="https://metacpan.org/pod/DB_File"
 arch="all"
-license="GPL PerlArtistic"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl"
 makedepends="perl-dev db-dev"
-install=
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/P/PM/PMQS/$_pkgname-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/P/PM/PMQS/DB_File-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 prepare() {
@@ -23,21 +22,18 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="2a08e43ef007e31e551b79e5b5f73dc6a742241c4fdf11f7228741b237df78b10aef182ac40a6cb6588366a5bd8bc326a5f8bbd2542fb694e2ed803e87d8f09f  DB_File-1.852.tar.gz"
+sha512sums="484186dcad8b6310e60782c01f531b11f1088db2218e1aba3c303db458c220671d7cf6ba2d4ba88572ecc4abb8cfee32865aea1c78ba7e594ddaf132780130e4  DB_File-1.853.tar.gz"
