community/py3-cu2qu: disable on x86

--- a/community/py3-cu2qu/APKBUILD
+++ b/community/py3-cu2qu/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.6.6
 pkgrel=0
 pkgdesc="Cubic-to-quadratic bezier curve conversion"
 url="https://github.com/googlefonts/cu2qu"
-arch="all"
+arch="all !x86"
 license="Apache-2.0"
 depends="python3 py3-fonttools py3-defcon"
 makedepends="py3-setuptools python3-dev cython"
