--- a/testing/cwm/APKBUILD
+++ b/testing/cwm/APKBUILD
@@ -1,29 +1,22 @@
 # Contributor: Cág <ca6c@bitmessage.ch>
 # Maintainer
 pkgname=cwm
-pkgver=6.3
+pkgver=6.6
 pkgrel=0
 pkgdesc="A lightweight and efficient window manager for X11"
 url="https://github.com/chneukirchen/cwm"
 arch="all"
 license="ISC"
-depends=""
 makedepends="libx11-dev libxft-dev libxrandr-dev byacc bsd-compat-headers"
-install=""
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/chneukirchen/$pkgname/archive/v$pkgver.tar.gz
-	menu-border.patch"
-builddir="$srcdir/$pkgname-$pkgver"
+source="cwm-$pkgver.tar.gz::https://github.com/chneukirchen/cwm/archive/v$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir/" PREFIX=/usr install
 }
 
-sha512sums="12f5c28ce2fa8e5310c49dd6d4fb58140a514943a93b8cab1c0c604bb50535a5e6b00b10f21c8d4500440f7ae7b14d2cb23c65eb201578fc01ab09f2bbc1e91f  cwm-6.3.tar.gz
-d83c250af671de4d3ba9fcec6b1f72dfa9c36962e392521315987088f04c76830aef49a91f8e63f7be3e3895e3bf8ef0cc874c8ebb9e6e541accd2fae70fe2b8  menu-border.patch"
+sha512sums="ff94fd1b7d263f9de538e5b338db58a08e1bec3e4233b84ab0a3ac94c47a45e10b2c772f93b897e70baf9a3c04e1a6fa04604ac71655acb7ebd1d10edb381042  cwm-6.6.tar.gz"
