--- a/testing/jdupes/APKBUILD
+++ b/testing/jdupes/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: tcely <tcely@users.noreply.github.com>
 # Maintainer: Roberto Oliveira <robertoguimaraes8@gmail.com>
 pkgname=jdupes
-pkgver=1.13.2
+pkgver=1.14.0
 pkgrel=0
 pkgdesc="identifying and taking actions upon duplicate files"
 options="!check" # No testsuite
@@ -9,7 +9,7 @@ url="https://github.com/jbruchon/jdupes"
 arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jbruchon/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/jbruchon/jdupes/archive/v$pkgver.tar.gz"
 
 build() {
 	make
@@ -19,4 +19,4 @@ package() {
 	make DESTDIR="$pkgdir" PREFIX=/usr install
 }
 
-sha512sums="80eb0053753df79e85c8c82c8bfc31ca31e55c2f6b184bb45a3baf644e00439b6c601239310325d366cc98a0f86c323b7aa487b40c9ee2bf2034735dafb89914  jdupes-1.13.2.tar.gz"
+sha512sums="c56e1f43194daf2c08a83f2e5133b57bec0bf3434a70f96ca0402832548db1d68e18bb51c4aeb37ce9067e651eed19ba84ce0b6c84477aa1a70e189ebbc0f3d2  jdupes-1.14.0.tar.gz"
