community/ttf-cantarell: disable on x86

--- a/community/ttf-cantarell/APKBUILD
+++ b/community/ttf-cantarell/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.200
 pkgrel=1
 pkgdesc="Humanist sans-serif font designed for on-screen reading"
 url="https://wiki.gnome.org/Projects/CantarellFonts"
-arch="noarch !s390x"
+arch="noarch !x86 !s390x"
 license="OFL-1.1 AND Apache-2.0"
 makedepends="meson gettext-dev appstream-glib-dev psautohint py3-fontmath"
 source="https://download.gnome.org/sources/cantarell-fonts/$pkgver/cantarell-fonts-$pkgver.tar.xz"
@@ -23,7 +23,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
