community/tor: enable ZSTD and LZMA support
fixes #11112

--- a/community/tor/APKBUILD
+++ b/community/tor/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Christine Dodrill <me@christine.website>
 pkgname=tor
 pkgver=0.4.2.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Anonymous network connectivity"
 url="https://www.torproject.org/"
 arch="all"
 license="BSD-3-Clause"
 pkgusers="tor"
 makedepends="linux-headers bash libevent-dev openssl-dev ca-certificates
-	zlib-dev"
+	zlib-dev zstd-dev xz-dev"
 install="$pkgname.post-upgrade $pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://www.torproject.org/dist/tor-$pkgver.tar.gz
