testing/pegasus-frontend:new aport
A cross platform, customizable graphical frontend for launching emulators and managing your game collection.
http://pegasus-frontend.org

--- a/testing/pegasus-frontend/APKBUILD
+++ b/testing/pegasus-frontend/APKBUILD
@@ -4,7 +4,7 @@ pkgname=pegasus-frontend
 pkgver=12
 _realver=alpha12
 pkgrel=0
-pkgdesc="A cross platform, customizable graphical frontend for launching emulators and managing your game collection."
+pkgdesc="A cross platform, customizable graphical frontend for launching emulators and managing your game collection"
 url="http://pegasus-frontend.org"
 arch="all"
 license="GPL-1.0-or-later"
