community/libdmtx: move from testing

--- a/community/libdmtx/APKBUILD
+++ b/community/libdmtx/APKBUILD
@@ -9,7 +9,7 @@ arch="all"
 license="BSD-2-Clause"
 makedepends="autoconf automake libtool"
 source="https://github.com/dmtx/libdmtx/archive/v$pkgver/libdmtx-$pkgver.tar.gz"
-subpackages="$pkgname-dev $pkgname-libs $pkgname-doc"
+subpackages="$pkgname-static $pkgname-dev $pkgname-libs $pkgname-doc"
 
 prepare() {
 	default_prepare
