community/prison: build with libdmtx

--- a/community/prison/APKBUILD
+++ b/community/prison/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=prison
 pkgver=5.65.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A barcode API to produce QRCode barcodes and DataMatrix barcodes"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="MIT"
-depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev"
+depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev libdmtx-dev"
 makedepends="$depends_dev extra-cmake-modules doxygen qt5-qttools-dev libqrencode-dev"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/prison-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc"
