community/gnome-shell: set cap_sys_nice to allow enabling realtime scheduling

--- a/community/gnome-shell/APKBUILD
+++ b/community/gnome-shell/APKBUILD
@@ -46,7 +46,8 @@ makedepends="gnome-desktop-dev
 	gnome-bluetooth-dev
 	gstreamer-dev
 	gnome-autoar-dev
-	asciidoc"
+	asciidoc
+	libcap"
 checkdepends="
 	xvfb-run
 	mesa-dri-swrast
@@ -74,6 +75,8 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
+	#allow realtime scheduling
+	setcap cap_sys_nice+ep "$pkgdir"/usr/bin/gnome-shell
 }
 
 sha512sums="7831a4e7f5356d675b91a2feb551edf0e85e7ba8962f556f9448fc4c537afe1ee35e8b53cd9c349ff62bf783a24f0686ce9282175156eaf962db1fb26c499d28  gnome-shell-3.34.3.tar.xz"
