--- a/community/chromium/APKBUILD
+++ b/community/chromium/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
-# Maintainer: Carlo Landmeter <clandmeter@gmail.com>
+# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=chromium
 pkgver=79.0.3945.88
 pkgrel=0
