main/mesa: build freedreno only for arm
Freedreno (and especially the MSM DRM kernel driver) works only on ARM,
so there is no reason to build it for all other architectures.

--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mesa
 pkgver=19.3.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Mesa DRI OpenGL library"
 url="https://www.mesa3d.org"
 arch="all"
@@ -10,7 +10,6 @@ subpackages="
 	$pkgname-dev
 	$pkgname-dri-ati:_dri
 	$pkgname-dri-nouveau:_dri
-	$pkgname-dri-freedreno:_dri
 	$pkgname-dri-swrast:_dri
 	$pkgname-dri-virtio:_dri
 	$pkgname-glapi $pkgname-egl $pkgname-gl $pkgname-gles
@@ -69,7 +68,7 @@ fi
 
 _dri_driverdir=/usr/lib/xorg/modules/dri
 _dri_drivers="r100,r200,nouveau"
-_gallium_drivers="r300,r600,radeonsi,nouveau,freedreno,swrast,virgl"
+_gallium_drivers="r300,r600,radeonsi,nouveau,swrast,virgl"
 _vulkan_drivers="amd"
 _arch_opts=""
 _vulkan_overlay_layer=false
@@ -92,10 +91,11 @@ x86*)
 	esac
 	;;
 armhf|armv7|aarch64)
-	_gallium_drivers="${_gallium_drivers},vc4,v3d,kmsro,lima,panfrost,etnaviv,tegra"
+	_gallium_drivers="${_gallium_drivers},vc4,v3d,freedreno,kmsro,lima,panfrost,etnaviv,tegra"
 	subpackages="$subpackages
 		$pkgname-dri-vc4:_dri
 		$pkgname-dri-v3d:_dri
+		$pkgname-dri-freedreno:_dri
 		$pkgname-dri-kmsro:_dri
 		$pkgname-dri-lima:_dri
 		$pkgname-dri-panfrost:_dri
