community/psautohint: re-enable on x86
Now that py3-ufo2ft works

--- a/community/psautohint/APKBUILD
+++ b/community/psautohint/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.0.0
 pkgrel=0
 pkgdesc="A standalone version of AFDKO's autohinter"
 url="https://github.com/adobe-type-tools/psautohint"
-arch="all !x86 !s390x" # ufo2ft
+arch="all !s390x" # ufo2ft
 license="Apache-2.0"
 depends="python3 py3-fonttools py3-lxml py3-statmake py3-ufo2ft"
 makedepends="py3-setuptools python3-dev"
