--- a/main/libgcab/APKBUILD
+++ b/main/libgcab/APKBUILD
@@ -1,46 +1,34 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libgcab
-pkgver=0.7
-pkgrel=3
+pkgver=1.4
+pkgrel=0
 pkgdesc="A GObject library to create cabinet files"
 url=" https://wiki.gnome.org/msitools"
 arch="all"
 license="LGPL-2.0-or-later"
-depends=""
-depends_dev="gettext-dev"
-makedepends="$depends_dev automake autoconf
-	libtool gobject-introspection-dev
-	intltool glib-dev gtk-doc"
-install=""
+makedepends="meson gobject-introspection-dev glib-dev vala gtk-doc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/gcab/${pkgver:0:4}/gcab-$pkgver.tar.xz
-        configure.patch
-       "
+source="https://download.gnome.org/sources/gcab/$pkgver/gcab-$pkgver.tar.xz"
 builddir="$srcdir"/gcab-$pkgver
 
-prepare() {
-	default_prepare
-	autoreconf -f -i
-}
-
 build() {
-	cd "$builddir"
-	./configure \
+	meson \
 		--prefix=/usr \
-		 --disable-nls
-	make
+		--sysconfdir=/etc \
+		--mandir=/usr/share/man \
+		--localstatedir=/var \
+		--buildtype=debugoptimized \
+		output
+	ninja -C output
 }
 
 check() {
-	cd "$builddir"
-	make check
+	ninja -C output test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="db8c0b4ee2bc75b8bb540b4fe0e9304782b9848b3ab0ba3077638d13cdec652f6178206ec6474af036fba90e952ef0052dd9d19be9eb72bae97d98f8f18a0c02  gcab-0.7.tar.xz
-110fe07dcc3fceffd174d6dd417e2906e63ad7ba4021ceae9d6c6b660a483e68530223c6bc65ae98a448b756930904c9bb320e0d8ed3a17f895d6986e90d3203  configure.patch"
+sha512sums="66a2e0d0a5888c555153356ce808f602053e71b76af19794db7e3bbf9516fe791805068838b4e208698cd645ada7a08610ac95f846fa81e00a9b955016306299  gcab-1.4.tar.xz"
