--- a/community/kmouth/APKBUILD
+++ b/community/kmouth/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kmouth
 pkgver=19.12.0
 pkgrel=0
-arch="all"
+arch="all !armhf" #qtdeclarative
 url="https://kde.org/applications/utilities/org.kde.kmouth"
 pkgdesc="Speech Synthesizer Frontend"
 license="GPL-2.0-or-later"
