community/mkvtoolnix: disable on armhf
Needs qtmultimedia -> qtdeclarative

--- a/community/mkvtoolnix/APKBUILD
+++ b/community/mkvtoolnix/APKBUILD
@@ -6,7 +6,7 @@ pkgver=42.0.0
 pkgrel=0
 pkgdesc="Set of tools to create, edit and inspect Matroska files"
 url="https://mkvtoolnix.download/index.html"
-arch="all"
+arch="all !armhf" # qtmultimedia -> qtdeclarative
 license="GPL-2.0-only"
 makedepends="boost-dev docbook-xsl file-dev flac-dev gtest-dev
 	libmatroska-dev libogg-dev libvorbis-dev ruby-json ruby-rake zlib-dev
