main/nftables: create directory /etc/nftables.d

--- a/main/nftables/APKBUILD
+++ b/main/nftables/APKBUILD
@@ -53,6 +53,7 @@ package() {
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -Dm644 "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
 	install -Dm644 "$srcdir"/nftables.nft "$pkgdir"/etc/nftables.nft
+	install -dm755 "$pkgdir"/etc/nftables.d
 }
 
 sha512sums="d264f6fc75c95510e29fe7d5b82ae418d502f40437b098ba6117ffb1374d9989d70a7296e2e58c5fb25142145a987bb9c160902637899f892589809f9541db43  nftables-0.9.3.tar.bz2
